--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "numpy>=2.4.2",
+    "pandas-stubs>=3.0.0.260204",
     "plotly>=6.5.2",
     "scipy>=1.17.0",
     "setuptools>=82.0.0",
